<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".AddHouseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/pic_one"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_add_24" />

                    <ImageView
                        android:id="@+id/pic_two"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_add_24" />

                    <ImageView
                        android:id="@+id/pic_three"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_add_24" />

                    <ImageView
                        android:id="@+id/pic_four"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_add_24" />

                    <ImageView
                        android:id="@+id/pic_five"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_baseline_add_24" />


                </LinearLayout>

            </HorizontalScrollView>


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/yellow" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:hint="House Location (Eneo Nyumba Ilipo)"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:hint="House Price (Bei ya Nyumba)"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/service_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/service_fee_tozo_ya_huduma"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/yellow" />

            <EditText
                android:id="@+id/total_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/total_rooms_jumla_ya_vyumba"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/house_details_maelezo_ya_nyumba"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/more_about_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:hint="1. Master\n2. Jiko\n3. Stoo\n4. Bafu/Choo (Cha ndani au nje)\n5. Ziada(Umbali kutoka barabarani, Parking, Air Condition, vinginevyo)"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/purple_700" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Terms of payment (Masharti ya Malipo)"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_input"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/spinner_months"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <EditText
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_input"
                android:hint="@string/masharti_kuhusu_aina_ya_mpangaji_unayemtaka"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="@color/yellow"
                android:text="@string/upload_house"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>