<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewHouseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:id="@+id/picture_selected"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/yellow" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/pic_one"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/pic_two"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/pic_three"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/pic_four"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:id="@+id/pic_five"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/logo" />

                </LinearLayout>

            </HorizontalScrollView>

            <RelativeLayout
                android:id="@+id/text_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorGreen"
                android:padding="5dp">

                <TextView
                    android:id="@+id/availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_location_on_24" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_attach_money_24" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/yellow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/house_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textColor="@color/goodgrey"
                android:textSize="14sp"
                android:textStyle="normal" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>